--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "dist/functions/*.js",
 	"scripts": {
-		"build": "tsc",
+		"build": "npx rollup -c",
 		"clean": "rimraf dist",
 		"lint": "eslint . --max-warnings 0 --report-unused-disable-directives",
 		"prettier": "prettier --config .prettierrc.cjs ./src --write",
@@ -20,6 +20,9 @@
 	},
 	"devDependencies": {
 		"@ianvs/prettier-plugin-sort-imports": "^4.0.2",
+		"@rollup/plugin-alias": "^5.0.0",
+		"@rollup/plugin-multi-entry": "^6.0.0",
+		"@rollup/plugin-typescript": "^11.1.1",
 		"@types/node": "18.x",
 		"@typescript-eslint/eslint-plugin": "^5.59.9",
 		"@typescript-eslint/parser": "^5.59.9",
@@ -29,6 +32,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-packagejson": "^2.4.3",
 		"rimraf": "^5.0.0",
+		"rollup": "^3.24.0",
 		"typescript": "^5.1.3"
 	}
 }
