--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"prettier-plugin-packagejson": "^2.4.3",
 		"rimraf": "^5.0.0",
 		"rollup": "^3.24.0",
+		"rollup-plugin-auto-external": "^2.0.0",
 		"typescript": "^5.1.3"
 	}
 }
